@@ -6,12 +6,13 @@ apport (0.10) UNRELEASED; urgency=low
   * Fix the GPL URLs in source file's copyright comments.
   * debian/apport.cron.daily: Add -mindepth 1 to find commands to avoid
     attempting to remove the /var/crash/ directory. Closes: LP#55107
-  * problem_report.py: 
+  * problem_report.py:
     - Fix precise whitespace handling in continuation lines, add selftest.
     - Add selftest for reading a report, modifying fields, and writing it
       back.
+    - Fix writing back binary data, adapt test suite to check it.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 11 Aug 2006 14:14:32 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 11 Aug 2006 15:06:35 +0200
 
 apport (0.9) edgy; urgency=low
 
